Initial work for running the game servers in docker